Fix: unexpected word wrapping in the navigation explorer

--- a/BlazingStory/wwwroot/css/styles.css
+++ b/BlazingStory/wwwroot/css/styles.css
@@ -536,11 +536,18 @@ button {
 }
 
 .navigation-tree {
+  min-width: 100%;
+  display: inline-flex;
+  flex-direction: column;
   /* for Active Story or Docs */
   /* ---- Chevron ---- */
   /* ---- Sub Items ---- */
   /* ---- Sub Heading ---- */
   /* ---- Icons ---- */
+}
+.navigation-tree .navigation-tree-item {
+  display: inline-flex;
+  flex-direction: column;
 }
 .navigation-tree .caption {
   height: 24px;
@@ -555,6 +562,7 @@ button {
   background-color: transparent;
   cursor: pointer;
   height: 100%;
+  white-space: nowrap;
 }
 .navigation-tree .caption .action {
   align-items: center;
@@ -562,8 +570,8 @@ button {
   font-stretch: 100%;
   display: flex;
   flex-wrap: nowrap;
-  width: 100%;
-  padding: 0;
+  flex: 1;
+  padding: 0 12px 0 0;
   appearance: none;
   text-decoration: none;
 }
@@ -610,7 +618,8 @@ button {
   display: none;
 }
 .navigation-tree .expanded > .sub-items {
-  display: block;
+  display: inline-flex;
+  flex-direction: column;
 }
 .navigation-tree .caption.sub-heading {
   height: 20px;
